--- a/selony_backend/requirements.txt
+++ b/selony_backend/requirements.txt
@@ -22,6 +22,7 @@ python-dotenv==1.0.0
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
+stripe==6.0.0
 text-unidecode==1.3
 typing_extensions==4.8.0
 tzdata==2023.3
