--- a/selony_backend/requirements.txt
+++ b/selony_backend/requirements.txt
@@ -1,30 +1,62 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 aniso8601==9.0.1
-asgiref==3.7.2
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.0
-cryptography==41.0.4
+asgiref==3.5.2
+async-timeout==4.0.2
+attrs==23.1.0
+azure-core==1.27.1
+azure-identity==1.13.0
+azure-servicebus==7.11.0
+backports.zoneinfo==0.2.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==41.0.1
 Deprecated==1.2.14
-Django==4.2.5
-django-filter==23.3
+Django==4.0.7
+django-cors-headers==3.13.0
+django-environ==0.9.0
+django-filter==22.1
 django-oauth-toolkit==2.3.0
+djangorestframework==3.14.0
+drf-jwt==1.19.2
+frozenlist==1.3.3
 graphene==3.3
 graphene-django==3.1.5
+graphene-file-upload==1.3.0
 graphql-core==3.2.3
 graphql-relay==3.2.0
+greenlet==1.1.3
 idna==3.4
+isodate==0.6.1
+JSON-log-formatter==0.5.2
 jwcrypto==1.5.0
-mysqlclient==2.2.0
+msal==1.22.0
+msal-extensions==1.0.0
+mssql-django==1.1.3
+multidict==6.0.4
+mysql==0.0.3
+mysqlclient==2.1.1
+numpy==1.24.1
 oauthlib==3.2.2
+pandas==1.5.3
+portalocker==2.7.0
 promise==2.3
 pycparser==2.21
+PyJWT==1.7.1
+pyodbc==4.0.34
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2022.2.1
+pywin32==306
 requests==2.31.0
 six==1.16.0
-sqlparse==0.4.4
+SQLAlchemy==1.4.41
+sqlparse==0.4.2
 stripe==6.0.0
 text-unidecode==1.3
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.6
+typing_extensions==4.6.3
+tzdata==2022.2
+urllib3==2.0.3
 wrapt==1.15.0
+yarl==1.9.2
